<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".VisualizarProductos">

    <TextView
        android:id="@+id/tvSeleccionarCategoria"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/stgSeleccionarCategoria" />

    <Spinner
        android:id="@+id/cmbProductosCategoria"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/tvListaProductos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/stgListaProd" />

    <ListView
        android:id="@+id/lstProductos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </ListView>

    <TextView
        android:id="@+id/tvCantidadPedir"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/stgCantPedir" />

    <EditText
        android:id="@+id/edtProdCantidad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/stgCeroNum"
        android:inputType="number" />

    <Button
        android:id="@+id/btnProdaddPedido"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/stgAgregar" />
</LinearLayout>